fix: swagger golang
